# SpiceGenTcl

./: .gitignore  LICENSE.txt  Makefile.in  README.md  SpiceGenTcl.tcl  changelog.txt  configure  configure.ac  pkgIndex.tcl
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: FAQ.html  SpiceGenTcl-Advanced.html  SpiceGenTcl-FAQ.html  SpiceGenTcl-List-of-devices.html  SpiceGenTcl-List-of-devices.n  SpiceGenTcl-Parser.html  SpiceGenTcl-SpiceGenTcl-Common-Analyses.html  SpiceGenTcl-SpiceGenTcl-Common-Analyses.n  SpiceGenTcl-SpiceGenTcl-Common-BasicDevices.html  SpiceGenTcl-SpiceGenTcl-Common-BasicDevices.n  SpiceGenTcl-SpiceGenTcl-Common-Sources.html  SpiceGenTcl-SpiceGenTcl-Common-Sources.n  SpiceGenTcl-SpiceGenTcl-Ltspice-Analyses.html  SpiceGenTcl-SpiceGenTcl-Ltspice-Analyses.n  SpiceGenTcl-SpiceGenTcl-Ltspice-BasicDevices.html  SpiceGenTcl-SpiceGenTcl-Ltspice-BasicDevices.n  SpiceGenTcl-SpiceGenTcl-Ltspice-SemiconductorDevices.html  SpiceGenTcl-SpiceGenTcl-Ltspice-SemiconductorDevices.n  SpiceGenTcl-SpiceGenTcl-Ltspice-Simulators.html  SpiceGenTcl-SpiceGenTcl-Ltspice-Simulators.n  SpiceGenTcl-SpiceGenTcl-Ltspice-Sources.html  SpiceGenTcl-SpiceGenTcl-Ltspice-Sources.n  SpiceGenTcl-SpiceGenTcl-Ngspice-Analyses.html  SpiceGenTcl-SpiceGenTcl-Ngspice-Analyses.n  SpiceGenTcl-SpiceGenTcl-Ngspice-BasicDevices.html  SpiceGenTcl-SpiceGenTcl-Ngspice-BasicDevices.n  SpiceGenTcl-SpiceGenTcl-Ngspice-Misc.html  SpiceGenTcl-SpiceGenTcl-Ngspice-Misc.n  SpiceGenTcl-SpiceGenTcl-Ngspice-SemiconductorDevices.html  SpiceGenTcl-SpiceGenTcl-Ngspice-SemiconductorDevices.n  SpiceGenTcl-SpiceGenTcl-Ngspice-Simulators.html  SpiceGenTcl-SpiceGenTcl-Ngspice-Simulators.n  SpiceGenTcl-SpiceGenTcl-Ngspice-Sources.html  SpiceGenTcl-SpiceGenTcl-Ngspice-Sources.n  SpiceGenTcl-SpiceGenTcl-Ngspice.html  SpiceGenTcl-SpiceGenTcl-Ngspice.n  SpiceGenTcl-SpiceGenTcl-Xyce-Analyses.html  SpiceGenTcl-SpiceGenTcl-Xyce-Analyses.n  SpiceGenTcl-SpiceGenTcl-Xyce-BasicDevices.html  SpiceGenTcl-SpiceGenTcl-Xyce-BasicDevices.n  (+60 more)
docs/assets/: ruff-min.js
examples/: debug-out.txt  debug-out2.txt  diffpair_sens.tcl  diode_cv.tcl  diode_iv.tcl  helperFuncs.tcl  monte_carlo.tcl  netlist_manipulations.tcl  render.html  resistor_divider.tcl  runAllExamples.sh  subcircuit.tcl  subcircuitNested.tcl
examples/ac/: diode_cv.tcl
examples/advanced/: monte_carlo.tcl
examples/dc/: diode_iv.tcl  resistor_divider.tcl
examples/html_charts/: diode_cv.html  diode_iv.html  monte_carlo.html  monte_carlo_combined.html  monte_carlo_typ.html  (+2 more)
src/: aliases.tcl  generalClasses.tcl  specAnalysesClassesCommon.tcl  specElementsClassesCommon.tcl
test/: all.tcl  all_codeCoverage.tcl  arbitaryTest.tcl  codeCoverage.tcl  generalClasses.test  nagelfarSyntaxBuild.tcl  readRawLtspice.test  readRawNgspice.test  specAnalysesClassesLtspice.test  specAnalysesClassesNgspice.test  specAnalysesClassesXyce.test  specElemsClassesCommon.test  specElemsClassesLtspice.test  specElemsClassesNgspice.test  specElemsClassesXyce.test  specModsClassesLtspice.test  specModsClassesNgspice.test  specModsClassesXyce.test  specSimulatorClassesLtspice.test  specSimulatorClassesNgspice.test  specSimulatorClassesXyce.test  staticCheck.tcl  syntaxdb.tcl  testAll.tcl  testUtilities.tcl
(+179 files in other folders)
